--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
         <div id="load-spinner" class="my-4 text-center hidden">
           <span class="loading loading-spinner loading-lg"></span>
         </div>
+        <!-- no data available -->
+        <div id="data-error" class="my-4 text-center hidden">
+          <h2 class="text-3xl font-bold">No Data Available</h2>
+        </div>
         <!-- show card -->
         <div
           id="phone-container"
